--- a/MapRotationTracker/MainWindow.xaml
+++ b/MapRotationTracker/MainWindow.xaml
@@ -22,7 +22,7 @@
         <Border.Background>
             <LinearGradientBrush StartPoint="0,0"
                                  EndPoint="1,2">
-                <GradientStop Color="#2F2F2F" Offset="0.0"/>
+                <GradientStop Color="#181818" Offset="0.0"/>
                 <GradientStop Color="#212121" Offset="1"/>
             </LinearGradientBrush>
         </Border.Background>
