--- a/MapRotationTracker/Controls/MapButtonStyle.xaml
+++ b/MapRotationTracker/Controls/MapButtonStyle.xaml
@@ -24,7 +24,7 @@
                             <Rectangle x:Name="TextRectangle"
                                 Stroke="#2F2F2F"
                                 Width="{TemplateBinding Size, Converter={StaticResource ButtonSizeToRectWidthConverter}}"
-                                Visibility="{TemplateBinding IsNameVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                Visibility="{TemplateBinding Map, Converter={StaticResource MapImageToButtonVisibilityConverter}}"
                                 Height="20" 
                                 Margin="0,20,0,0"
                                 VerticalAlignment="Top"
@@ -33,7 +33,7 @@
                             
                             <TextBlock x:Name="MapNameLabel" Text="{TemplateBinding Map, Converter={StaticResource MapImageToNameConverter}}"                                     
                                 FontSize="15"
-                                Visibility="{TemplateBinding IsNameVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                Visibility="{TemplateBinding Map, Converter={StaticResource MapImageToButtonVisibilityConverter}}"
                                 Foreground="Black"
                                 Margin="0,20,0,0"
                                 VerticalAlignment="Top"
