--- a/MapRotationTracker/MainWindow.xaml
+++ b/MapRotationTracker/MainWindow.xaml
@@ -62,15 +62,16 @@
                              Style="{StaticResource RadioButtonTheme}"
                              Command="{Binding MapListViewCommand}">
                 </RadioButton>
-                <RadioButton Content="Help"
+                <RadioButton Content="Settings"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Style="{StaticResource RadioButtonTheme}">
+                             Style="{StaticResource RadioButtonTheme}"
+                             Command="{Binding SettingsViewCommand}">
                 </RadioButton>
 
             </StackPanel>
-            
+
             <TextBox Width="250"
                      Height="40"
                      VerticalAlignment="Center"
