--- a/MapRotationTracker/App.xaml
+++ b/MapRotationTracker/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="Style/MapButtonLargeTheme.xaml"/>
                 <ResourceDictionary Source="Style/ToggleButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/DropShadowButtonTheme.xaml"/>
+                <ResourceDictionary Source="Style/BackgroundImageTheme.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
 
