--- a/MapRotationTracker/MainWindow.xaml
+++ b/MapRotationTracker/MainWindow.xaml
@@ -76,11 +76,13 @@
             </StackPanel>
 
             <TextBox Width="250"
-                     Height="40"
-                     VerticalAlignment="Center"
+                     
+                     VerticalAlignment="Top"
                      HorizontalAlignment="Left"
                      Margin="5"
                      Grid.Column="1"
+                     Grid.RowSpan="2"
+                     Panel.ZIndex="1"
                      Style="{StaticResource SearchTextBox}">
             </TextBox>
 
