--- a/MapRotationTracker/Style/SearchBoxTheme.xaml
+++ b/MapRotationTracker/Style/SearchBoxTheme.xaml
@@ -1,11 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                    
+                    xmlns:converters="clr-namespace:MapRotationTracker.Converters">
     <Style TargetType="{x:Type TextBox}"
            x:Key="SearchTextBox">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10"
+                    <ControlTemplate.Resources>
+                        <converters:SearchResultsToStackPanelSizeConverter x:Key="SearchResultsToStackPanelSizeConverter"/>
+                        <converters:SearchResultsToItemVisibilityConverter x:Key="SearchResultsToItemVisibilityConverter"/>
+                    </ControlTemplate.Resources>
+                    <Border CornerRadius="10" x:Name="SearchBorder"
                             Background="#4F5F4F"
                             Width="200" Height="40">
 
@@ -17,15 +22,15 @@
                                      Background="Transparent"
                                      Foreground="White"
                                      Padding="5"
-                                     VerticalContentAlignment="Center"
+                                     VerticalContentAlignment="Top"
                                      x:Name="SearchBox">
                             </TextBox>
                             <TextBlock IsHitTestVisible="False"
                                        Text="Search maps.."
-                                       VerticalAlignment="Center"
+                                       VerticalAlignment="Top"
                                        HorizontalAlignment="Left"
                                        FontSize="11"
-                                       Margin="10,0,0,0"
+                                       Margin="10,10,0,0"
                                        Foreground="DarkGray"
                                        Grid.Column="1">
                                 <TextBlock.Style>
@@ -39,9 +44,54 @@
                                     </Style>
                                 </TextBlock.Style>
                             </TextBlock>
+                            <StackPanel Orientation="Vertical" Width="{TemplateBinding Width}" Margin="10,40,0,0">
+                                <RadioButton Style="{StaticResource RadioButtonTheme}" 
+                                             Content="Map 1" 
+                                             Foreground="White"
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=1}"></RadioButton>
+                                <StackPanel Orientation="Horizontal" 
+                                            Height="30"
+                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=1}">
+                                    <TextBlock Text="Map 1" 
+                                               Foreground="White">
+                                    </TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" 
+                                            Height="30" 
+                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=2}">
+                                    <TextBlock Text="Map 2" 
+                                               Foreground="White">
+                                    </TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal"
+                                            Height="30"
+                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=3}">
+                                    <TextBlock Text="Map 3" 
+                                               Foreground="White">
+                                    </TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" 
+                                            Height="30"
+                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=4}">
+                                    <TextBlock Text="Map 4" 
+                                               Foreground="White">
+                                    </TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" 
+                                            Height="30"
+                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=5}">
+                                    <TextBlock Text="Map 5" 
+                                               Foreground="White">
+                                    </TextBlock>
+                                </StackPanel>
+                            </StackPanel>
                         </Grid>
                     </Border>
-                    
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelectionActive" Value="False" SourceName="SearchBox">
+                            <Setter Property="Height" TargetName="SearchBorder" Value="{Binding SearchResults, Converter={StaticResource SearchResultsToStackPanelSizeConverter}}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
