--- a/MapRotationTracker/App.xaml
+++ b/MapRotationTracker/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/RadioButtonTheme.xaml"/>
+                <ResourceDictionary Source="Style/SearchRadioButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/SearchBoxTheme.xaml"/>
                 <ResourceDictionary Source="Style/MapButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/MapLargeThemes.xaml"/>
@@ -17,7 +18,6 @@
                 <ResourceDictionary Source="Style/ToggleButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/DropShadowButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/BackgroundImageTheme.xaml"/>
-
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
