--- a/MapRotationTracker/Style/SearchBoxTheme.xaml
+++ b/MapRotationTracker/Style/SearchBoxTheme.xaml
@@ -11,18 +11,17 @@
                         <converters:SearchResultsToItemVisibilityConverter x:Key="SearchResultsToItemVisibilityConverter"/>
                     </ControlTemplate.Resources>
                     <Border CornerRadius="10" x:Name="SearchBorder"
-                            Background="#4F5F4F"
-                            Width="200" Height="40">
-
+                            Background="#2F3F3F"
+                            Margin="0,10,0,0"
+                            Width="200" Height="{Binding SearchResults, Converter={StaticResource SearchResultsToStackPanelSizeConverter}}">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
-                            <TextBox Margin="1"
+                            <TextBox Margin="8,12,0,0"
                                      Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
                                      BorderThickness="0"
                                      Background="Transparent"
                                      Foreground="White"
-                                     Padding="5"
-                                     VerticalContentAlignment="Top"
+                                     VerticalContentAlignment="Top"                                    
                                      x:Name="SearchBox">
                             </TextBox>
                             <TextBlock IsHitTestVisible="False"
@@ -30,67 +29,52 @@
                                        VerticalAlignment="Top"
                                        HorizontalAlignment="Left"
                                        FontSize="11"
-                                       Margin="10,10,0,0"
+                                       Margin="10,12,0,0"
                                        Foreground="DarkGray"
-                                       Grid.Column="1">
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}">
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                        <Setter Property="Visibility" Value="Hidden"/>
-                                    </Style>
-                                </TextBlock.Style>
+                                       Grid.Column="1"
+                                       x:Name="SearchTextBlock"
+                                       Visibility="Hidden">
                             </TextBlock>
-                            <StackPanel Orientation="Vertical" Width="{TemplateBinding Width}" Margin="10,40,0,0">
-                                <RadioButton Style="{StaticResource RadioButtonTheme}" 
-                                             Content="Map 1" 
-                                             Foreground="White"
-                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=1}"></RadioButton>
-                                <StackPanel Orientation="Horizontal" 
-                                            Height="30"
-                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=1}">
-                                    <TextBlock Text="Map 1" 
-                                               Foreground="White">
-                                    </TextBlock>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" 
-                                            Height="30" 
-                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=2}">
-                                    <TextBlock Text="Map 2" 
-                                               Foreground="White">
-                                    </TextBlock>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal"
-                                            Height="30"
-                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=3}">
-                                    <TextBlock Text="Map 3" 
-                                               Foreground="White">
-                                    </TextBlock>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" 
-                                            Height="30"
-                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=4}">
-                                    <TextBlock Text="Map 4" 
-                                               Foreground="White">
-                                    </TextBlock>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" 
-                                            Height="30"
-                                            Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=5}">
-                                    <TextBlock Text="Map 5" 
-                                               Foreground="White">
-                                    </TextBlock>
-                                </StackPanel>
+                            <StackPanel Orientation="Vertical" 
+                                        Width="{TemplateBinding Width}" 
+                                        Margin="0,35,0,0" 
+                                        x:Name="ResultsPanel"
+                                        Visibility="Visible">
+                                
+                                <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
+                                             Content="{Binding SearchResults[0].MapName}" 
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=1}"
+                                             Command="{Binding SearchResultCommand}"
+                                             CommandParameter="{Binding SearchResults[0]}"/>
+                                <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
+                                             Content="{Binding SearchResults[1].MapName}"
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=2}"
+                                             Command="{Binding SearchResultCommand}"
+                                             CommandParameter="{Binding SearchResults[1]}"/>
+                                <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
+                                             Content="{Binding SearchResults[2].MapName}"
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=3}"
+                                             Command="{Binding SearchResultCommand}"
+                                             CommandParameter="{Binding SearchResults[2]}"/>
+                                <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
+                                             Content="{Binding SearchResults[3].MapName}" 
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=4}"
+                                             Command="{Binding SearchResultCommand}"
+                                             CommandParameter="{Binding SearchResults[3]}"/>
+                                <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
+                                             Content="{Binding SearchResults[4].MapName}"
+                                             Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=5}"
+                                             Command="{Binding SearchResultCommand}"
+                                             CommandParameter="{Binding SearchResults[4]}"/>
                             </StackPanel>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsSelectionActive" Value="False" SourceName="SearchBox">
-                            <Setter Property="Height" TargetName="SearchBorder" Value="{Binding SearchResults, Converter={StaticResource SearchResultsToStackPanelSizeConverter}}"/>
-                        </Trigger>
+                        <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
+                            <Setter Property="Height" TargetName="SearchBorder" Value="40"/>
+                            <Setter Property="Visibility" TargetName="ResultsPanel" Value="Hidden"/>
+                            <Setter Property="Visibility" TargetName="SearchTextBlock" Value="Visible"/>
+                        </DataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
