--- a/MapRotationTracker/App.xaml
+++ b/MapRotationTracker/App.xaml
@@ -18,6 +18,7 @@
                 <ResourceDictionary Source="Style/ToggleButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/DropShadowButtonTheme.xaml"/>
                 <ResourceDictionary Source="Style/BackgroundImageTheme.xaml"/>
+                <ResourceDictionary Source="Style/TankViewerTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
