--- a/MapRotationTracker/Style/SearchBoxTheme.xaml
+++ b/MapRotationTracker/Style/SearchBoxTheme.xaml
@@ -1,14 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                    
-                    xmlns:converters="clr-namespace:MapRotationTracker.Converters">
+                    xmlns:converters="clr-namespace:MapRotationTracker.Converters"
+                    xmlns:mainview="clr-namespace:MapRotationTracker.MVVM.ViewModel"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <Style TargetType="{x:Type TextBox}"
            x:Key="SearchTextBox">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <ControlTemplate.Resources>
+                        
                         <converters:SearchResultsToStackPanelSizeConverter x:Key="SearchResultsToStackPanelSizeConverter"/>
                         <converters:SearchResultsToItemVisibilityConverter x:Key="SearchResultsToItemVisibilityConverter"/>
+
+                        <ObjectDataProvider ObjectType="{x:Type mainview:MainViewModel}"
+                            MethodName="SearchResultAt" x:Key="searchResultAt">
+                            <ObjectDataProvider.MethodParameters>
+                                <system:Int32>0</system:Int32>
+                            </ObjectDataProvider.MethodParameters>
+                        </ObjectDataProvider>
+                        
                     </ControlTemplate.Resources>
                     <Border CornerRadius="10" x:Name="SearchBorder"
                             Background="#2F3F3F"
@@ -62,10 +73,15 @@
                                              Command="{Binding SearchResultCommand}"
                                              CommandParameter="{Binding SearchResults[3]}"/>
                                 <RadioButton Style="{StaticResource SearchRadioButtonTheme}" 
-                                             Content="{Binding SearchResults[4].Name}"
                                              Visibility="{Binding SearchResults, Converter={StaticResource SearchResultsToItemVisibilityConverter}, ConverterParameter=5}"
-                                             Command="{Binding SearchResultCommand}"
-                                             CommandParameter="{Binding SearchResults[4]}"/>
+                                             Command="{Binding SearchResultCommand}">
+                                    <RadioButton.Content>
+                                        <Binding Source="{StaticResource searchResultAt}" Path="MethodParameters[0]" BindsDirectlyToSource="True" Mode="OneWayToSource"/>
+                                    </RadioButton.Content>
+                                    <RadioButton.CommandParameter>
+                                        <Binding Source="{StaticResource searchResultAt}"/>
+                                    </RadioButton.CommandParameter>
+                                </RadioButton>
                             </StackPanel>
                         </Grid>
                     </Border>
