--- a/MapRotationTracker/Style/SearchRadioButtonTheme.xaml
+++ b/MapRotationTracker/Style/SearchRadioButtonTheme.xaml
@@ -7,10 +7,12 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RadioButton">
                         <Grid VerticalAlignment="Stretch"
+                              Width="{TemplateBinding Width}"
                                   HorizontalAlignment="Stretch"
                                   Background="{TemplateBinding Background}">
 
-                            <TextBlock Text="{TemplateBinding Property=Content}"
+                            <TextBlock
+                                Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
                                        Margin="10,0,0,0"/>
                         </Grid>
