--- a/MapRotationTracker/Themes/Generic.xaml
+++ b/MapRotationTracker/Themes/Generic.xaml
@@ -2,5 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="MapRotationTracker;component/Controls/MapButtonStyle.xaml"/>
+        <ResourceDictionary Source="MapRotationTracker;component/Controls/SearchBoxStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
